overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   font-family: "Jost", sans-serif;
   font-weight: 400;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 .container {
@@ -109,11 +110,12 @@ h1 {
   margin-top: -30px;
   z-index: 0;
   position: relative;
+  background-color: var(--Bg-blue);
 }
 
 .blue-bg2::after {
   content: '';
-  width: 100vw;
+  width: calc(100vw - 100%);
   height: 100%;
   z-index: 0;
   position: absolute;
@@ -127,7 +129,6 @@ h1 {
   padding: 30px;
   grid-column: 1/3;
   grid-row: 7/8;
-  justify-self: last baseline;
 }
 
 .sub-sign a {
@@ -153,11 +154,12 @@ h1 {
   margin-left: -20px;
   z-index: 0;
   position: relative;
+  background-color: var(--Bg-blue);
 }
 
 .blue-bg3::after {
   content: '';
-  width: 100vw;
+  width: calc(100vw - 100%);
   height: 100%;
   z-index: 0;
   position: absolute;
@@ -192,26 +194,6 @@ h1 {
 .grid-box p {
   line-height: 1.5;
   font-size: 1.2rem;
-}
-
-.box1 {
-  grid-column: 1;
-  grid-row: 1;
-}
-
-.box2 {
-  grid-column: 2;
-  grid-row: 1;
-}
-
-.box3 {
-  grid-column: 1;
-  grid-row: 2;
-}
-
-.box4 {
-  grid-column: 2;
-  grid-row: 2;
 }
 
 .polka-bg2 {
